# sample-django-azure-webapps

./: .dockerignore  .env.backup  .env.sample  .env.sqlite.sample  Dockerfile  README.md  apprunner.yaml  compose.with_local_db.yaml  compose.yaml  compose.yml  docker-compose.yml  manage.py  pyproject.toml  startup.sh
.github/workflows/: pushContainer.yml  pushContainer2ecr.yml
sample/: apps.py  forms.py  models.py  urls.py  views.py
sample/infra/: users.py
sample/migrations/: 0001_initial.py
sample/templates/: base.html  index.html  login.html  users.html
sampleProject/: asgi.py  settings.py  urls.py  wsgi.py
sql_db_docker/: compose.yaml  docker-compose.yml
