[tool.poetry]
name = "sample-django-azure-webapps"
version = "0.1.0"
description = ""
authors = ["k-ibaraki <ibaraki@ncdc.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
Django = "^4.0.3"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
aldjemy = "^2.6"
mssql-django = "^1.1.2"
SQLAlchemy = "^1.4.35"
aws-xray-sdk = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
